--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.5",
+    "@angular/animations": "^12.0.5",
+    "@angular/cdk": "^12.0.5",
     "@angular/common": "~12.0.5",
     "@angular/compiler": "~12.0.5",
     "@angular/core": "~12.0.5",
     "@angular/forms": "~12.0.5",
+    "@angular/localize": "~12.0.5",
+    "@angular/material": "^12.0.5",
     "@angular/platform-browser": "~12.0.5",
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
@@ -37,6 +40,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "typescript": "~4.2.3"
+    "typescript": "~4.2.3",
+    "cypress": "7.6.0"
   }
 }
